--- a/default.css
+++ b/default.css
@@ -12,9 +12,9 @@
   /* Codeblocks */
   --font-code: "JetBrainsMono", "Fira Code", "Source Sans Pro", sans-serif;
 
-  --blurple-replace: #7E7BFE;
-  --brand-experiment: #7E7BFE;
-  --brand-experiment-hover: #7E7BFEcc;
+  --blurple-replace: #f43d13;
+  --brand-experiment: #f43d13;
+  --brand-experiment-hover: #f43d13cc;
 
   --blurple-bg: linear-gradient(90deg, rgba(107, 105, 255, 1) 0%, rgba(131, 129, 254, 1) 100%);
   --blurple-bg-alt: #6C6AFF;
