--- a/shit.css
+++ b/shit.css
@@ -89,7 +89,7 @@
 [data-user-id="215562077178167296"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="215562077178167296"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://obscure-git.github.io/Lavender/assets/logo.png") center/100% no-repeat;
+            background: url("https://i.imgur.com/lcS045t.png") center/100% no-repeat;
             padding: 0px 7px 0px 7px;
             margin-right: 6px;
 }
