--- a/shit.css
+++ b/shit.css
@@ -79,7 +79,7 @@
 [data-user-id="305025375077924885"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="305025375077924885"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://i.imgur.com/BAPHDwH.png") center/100% no-repeat;
+            background: url("https://i.imgur.com/9EfTExn.png") center/100% no-repeat;
             padding: 0px 7px 0px 7px;
             margin-right: 6px;
 }
@@ -99,7 +99,7 @@
 [data-user-id="194003248007479296"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="194003248007479296"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://i.imgur.com/e5pXRvm.png") center/100% no-repeat;
+            background: url("https://i.imgur.com/kQTIWLp.png") center/100% no-repeat;
             padding: 0px 7px 0px 7px;
             margin-right: 6px;
 }
@@ -109,7 +109,7 @@
 [data-user-id="365969443454713866"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="365969443454713866"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://i.imgur.com/1MxXHJ9.png") center/100% no-repeat;
+            background: url("https://i.imgur.com/RGMevm1.png") center/100% no-repeat;
             padding: 0px 7px 0px 7px;
             margin-right: 6px;
 }
