--- a/shit.css
+++ b/shit.css
@@ -125,6 +125,16 @@
             margin-right: 6px;
 }
 
+/* Aya */
+[data-author-id='684353207732142101'] .header-2jRmjb .username-h_Y3Us::before,
+[data-user-id="684353207732142101"] + .header-1dhDWV::before,
+[data-user-id="684353207732142101"] + .text-3j8t_e .username-3JLfHz::before,
+[data-user-id="684353207732142101"] + .listName-PwbeHL .username-3JLfHz::before {
+	content: "";
+            background: url("https://i.imgur.com/aFi4Y0z.png") center/100% no-repeat;
+            padding: 0px 7px 0px 7px;
+            margin-right: 6px;
+}
 /* Small user popout - Added lavender icon next to my name */
 [aria-label="Obscure."].userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq .nameTag-H6kSJ0 .username-3JLfHz::before {
 	content: "";
