--- a/shit.css
+++ b/shit.css
@@ -131,7 +131,7 @@
 [data-user-id="684353207732142101"] + .text-3j8t_e .username-3JLfHz::before,
 [data-user-id="684353207732142101"] + .listName-PwbeHL .username-3JLfHz::before {
 	content: "";
-            background: url("https://i.imgur.com/aFi4Y0z.png") center/100% no-repeat;
+            background: url("https://i.imgur.com/tg0Xz2p.png") center/100% no-repeat;
             padding: 0px 7px 0px 7px;
             margin-right: 6px;
 }
