--- a/shit.css
+++ b/shit.css
@@ -9,55 +9,7 @@
  * @invite B9TK7nqRE4
 */
 
-@import "https://lavender-discord.github.io/Lavender/lavender.css";
-
-/* Skins — Basically all variables of the theme / I plan to add different variable files each with different color scheme 🤷‍ */
-@import "https://lavender-discord.github.io/Lavender/src/skins/default.css";
-
-/* Addons — External Imports and/or my personal modifications of them*/
-@import "https://lavender-discord.github.io/Lavender/addons/context-icons.css";
-@import "https://lavender-discord.github.io/Lavender/addons/settings-icons.css";
-@import "https://lavender-discord.github.io/Lavender/addons/cooler-activity.css";
-@import "https://lavender-discord.github.io/Lavender/addons/gradient-server.css";
-@import "https://lavender-discord.github.io/Lavender/addons/text-bar.css";
-@import "https://lavender-discord.github.io/Lavender/addons/icons.css";
-@import "https://lavender-discord.github.io/Lavender/addons/colored-svgs.css";
-
-/* Base — The files that I wasn't sure of which folder to put in 🤷‍ */
-@import "https://lavender-discord.github.io/Lavender/src/base/others.css";
-@import "https://lavender-discord.github.io/Lavender/src/base/snippets.css";
-@import "https://lavender-discord.github.io/Lavender/src/base/title-bar.css";
-
-/* Popouts — Popout menus of discord */
-@import "https://lavender-discord.github.io/Lavender/src/popouts/join-server.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/popup-menus.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/status-picker.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/user-popout.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/big-user-popout.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/emoji-picker.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/quick-switcher.css";
-@import "https://lavender-discord.github.io/Lavender/src/popouts/channel-attach.css";
-
-/* Pages */
-@import "https://lavender-discord.github.io/Lavender/src/pages/settings.css";
-@import "https://lavender-discord.github.io/Lavender/src/pages/explore.css";
-@import "https://lavender-discord.github.io/Lavender/src/pages/friends-list.css";
-@import "https://lavender-discord.github.io/Lavender/src/pages/voice-chat.css";
-
-/* Lists */
-@import "https://lavender-discord.github.io/Lavender/src/lists/server-list.css";
-@import "https://lavender-discord.github.io/Lavender/src/lists/channel-list.css";
-@import "https://lavender-discord.github.io/Lavender/src/lists/members-list.css";
-
-/* Components — Different components of the theme */
-@import "https://lavender-discord.github.io/Lavender/src/components/panel.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/status-indicators.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/channel-bar.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/popup-menus.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/chat-elements.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/user-actions.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/bd-spotify.css";
-@import "https://lavender-discord.github.io/Lavender/src/components/pc-spotify.css";
+@import url("https://lavender-discord.github.io/Lavender/clients/betterdiscord.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;600;700&display=swap');
