--- a/shit.css
+++ b/shit.css
@@ -9,7 +9,75 @@
  * @invite B9TK7nqRE4
 */
 
-@import url("https://lavender-discord.github.io/Lavender/clients/betterdiscord.css");
+@import url("https://lavender-discord.github.io/Lavender/src/source.css");
+/* ⚠️ Main theme file — Do not remove */
+
+/* 
+===============================================================================================================================
+                                                    🎨 SKINS
+                        Comment out/Uncomment the respective @import lines to disable/enable the skins.
+===============================================================================================================================
+*/
+
+@import url("https://lavender-discord.github.io/Lavender/modules/skins/default.css");
+/* Imports the dark color scheme of Lavender */
+
+/* More color schemes/skins coming soon */
+
+/* 
+===============================================================================================================================
+                                                    🔌 ADDONS
+                                Comment out the respective @import line to disable the addon.
+===============================================================================================================================
+*/
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/colored-svgs.css");
+/* Colors all the page svgs of discord */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/context-icons.css");
+/* Adds Context Icons with Iconsax Icons */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/emoji-replace.css");
+/* Replaces discords emojis with windows 11's */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/friends-grid.css");
+/* Adds a grid view to friends list */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/iconpack.css");
+/* Changes all discord default icons to iconsax icons */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/mention-links.css");
+/* Turns some common links to buttons/mentions, kind of helps you figure out phishing sites  */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/settings-icons.css");
+/* Adds Icons to settings menu's submenus */
+
+/* 
+===============================================================================================================================
+                                                    🗺️ ALLIGNMENT
+                                    Custom allignment of UI stuff that comes with lavender
+                                        Comment out to disable the custom allignment.
+===============================================================================================================================
+*/
+
+@import url("https://lavender-discord.github.io/Lavender/modules/allignment/userActions.css");
+/* Mic mute deafen button area */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/allignment/statusIndicators.css");
+/* Status Indicators on the top right */
+
+/* 
+===============================================================================================================================
+                                                    ⚡ LAVENDER
+                                                Exclusive Modifications
+===============================================================================================================================
+*/
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/gradient/gradient.css");
+/* Modifications exclusive to gradient server aka lavender support */
+
+@import url("https://lavender-discord.github.io/Lavender/modules/addons/lavender/lavender.css");
+/* Modifcations that add lavender watermark kinds of stuff in ui */
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;600;700&display=swap');
